add list user classes
